# fabric-dbt-runner

./: .gitignore  LICENSE  README.md  dbtrunner.py  nb_dbt_runner (2).ipynb  nb_dbt_runner.html  nb_dbt_runner.ipynb  pl_dbt_runner.json  pyproject.toml  requirements.txt  setup.py
fabric_dbt_runner/: __init__.py  config.py  lakehouse.py  runner.py  variable_library.py
